<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="Global" Id="{eb01e30f-66a6-45c9-9d1d-d0251679bf92}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	controller : Controller;
	controllerCmd : ControllerCmd;
	touchData : ARRAY [0..1,0..0] OF Point := [(x:=0,y:=0),(x:=0,y:=0)];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>